--- a/src/WeatherSearch.css
+++ b/src/WeatherSearch.css
@@ -1,5 +1,5 @@
 h1 {
-  color: #878787;
+  color: #142d4c;
   font-size: 24px;
   font-weight: 100;
   line-height: 29px;
@@ -10,4 +10,8 @@ h1 {
   color: #142d4c;
   font-size: 40px;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+}
+
+li {
+  list-style: none;
 }
