--- a/src/City.css
+++ b/src/City.css
@@ -1,6 +1,6 @@
 h1 {
-  color: #878787;
-  font-size: 24px;
+  color: #0b0a1c;
+  font-size: 28px;
   font-weight: 100;
   line-height: 29px;
   margin-bottom: 0;
